k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery
  labels:
    app: discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery
  template:
    metadata:
      name: discovery
      labels:
        app: discovery
    spec:
      containers:
        - name: discovery
          image: fenrisv/discovery:0.0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
