k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery
spec:
  type: LoadBalancer
  selector:
    app: discovery
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
